@@ -1,6 +1,8 @@
 2010-02-07  Vladimir Serbinenko  <phcoder@gmail.com>
 
 	* include/grub/multiboot2.h: Remove leftover file.
+	* include/grub/normal.h [GRUB_UTIL]: Remove leftover declarations.
+	* include/grub/partition.h [GRUB_UTIL]: Likewise.
 
 2010-02-07  Yves Blusseau  <blusseau@zetam.org>
 
